Fix text-align on small resolutions

--- a/assets/src/styles/ghost/post.scss
+++ b/assets/src/styles/ghost/post.scss
@@ -21,7 +21,11 @@
 .post-meta {
   color: $gray;
   font-family: $serif;
-  text-align: right;
+  text-align: left;
+
+  @include responsive(lg) {
+    text-align: right;
+  }
 }
 
 .post-title {
